kubernetes/apps/home/memos/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: memos
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/controller: memos
      app.kubernetes.io/instance: memos
      app.kubernetes.io/name: memos
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 5230
